# comp370-project

./: .gitignore  ONBOARDING.md  README.md  Taskfile.yml  flake.nix  pyproject.toml
.github/workflows/: cd.yml  ci.yml  nix.yml  release.yml
data/: comp370.db
docker/: Dockerfile
docs/report/: .gitignore  refs.bib  report.en.tex
public/graphiql/: index.html
scripts/: run.sh
scripts/latex/: build.sh  sign.sh  test.sh  watch.sh
scripts/python/: export.py  extract_lines.py  extract_side_characters.py  seed.py  test.py
scripts/python/annotations/: get.py  process.py
scripts/python/data/: annotate.py  extract.py  sample.py
scripts/python/db/: seed.py
scripts/python/statistics/: dashboard.py  idf.py  topics.py
src/comp370/: __init__.py  constants.py  main.py  utils.py
src/comp370/annotator/: __init__.py  annotator.py  codebook.py
src/comp370/annotator/annotators/: __init__.py  human.py  ollama.py
src/comp370/annotator/codebooks/: __init__.py  codebook_dan.py
src/comp370/client/fandom/: client.py  constants.py  session.py
src/comp370/client/fandom/models/: character.py
src/comp370/client/fandom/services/: __init__.py  __service__.py  character.py
src/comp370/client/imsdb/: client.py  constants.py  session.py  utils.py
src/comp370/client/imsdb/models/: __init__.py  episode.py  line.py  season.py
src/comp370/client/imsdb/services/: __init__.py  episode.py  season.py
src/comp370/client/label_studio/: client.py
src/comp370/db/: __init__.py  client.py  constants.py  models.py
src/comp370/db/tools/: character.py  tool.py
src/comp370/gql/: __init__.py  schema.py
src/comp370/nlp/: __init__.py  nltk.py  spacy.py
src/comp370/scraper/: __init__.py  client.py  constants.py  models.py  utils.py
src/comp370/seeder/: __init__.py  constants.py  name.py  seeder.py
tasks/: annotations.yml  container.yml  data.yml  db.yml  latex.yml  python.yml  statistics.yml  toml.yml  yaml.yml
