[project]
name = "comp370"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Dan Greco", email = "me@dangre.co" }]
dependencies = [
  "beautifulsoup4>=4.14.2",
  "graphene>=3.4.3",
  "graphene-sqlalchemy==3.0.0rc2",
  "importlib>=1.0.4",
  "jellyfish>=1.2.1",
  "nltk>=3.9.2",
  "pandas>=2.3.3",
  "promise>=2.3",
  "requests>=2.32.5",
  "requests-cache>=1.2.1",
  "rich>=14.2.0",
  "sqlalchemy>=2.0.44",
  "starlette>=0.49.3",
  "starlette-graphene3>=0.6.0",
  "uvicorn[standard]>=0.38.0",
]

[project.scripts]
comp370 = "comp370:main"

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=9.0.1",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.ty.environment]
python = ".venv"
