[project]
name = "comp370"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Dan Greco", email = "me@dangre.co" }]
dependencies = [
  "beautifulsoup4>=4.14.2",
  "bokeh>=3.8.1",
  "contractions>=0.1.73",
  "dotenv>=0.9.9",
  "graphene>=3.4.3",
  "graphene-sqlalchemy==3.0.0rc2",
  "importlib>=1.0.4",
  "inquirer>=3.4.1",
  "jellyfish>=1.2.1",
  "label-studio-sdk>=2.0.14",
  "nltk>=3.9.2",
  "ollama>=0.6.1",
  "pandas>=2.3.3",
  "promise>=2.3",
  "pydantic>=2.12.4",
  "requests>=2.32.5",
  "requests-cache>=1.2.1",
  "rich>=14.2.0",
  "scikit-learn>=1.7.2",
  "spacy>=3.8.11",
  "sqlalchemy>=2.0.44",
  "starlette>=0.49.3",
  "starlette-graphene3>=0.6.0",
  "uvicorn[standard]>=0.38.0",
]

[project.scripts]
comp370 = "comp370:main"

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=9.0.1",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.ty.environment]
python = ".venv"
